--- a/week6/TODO-APP/assets/css/styles.css
+++ b/week6/TODO-APP/assets/css/styles.css
@@ -1,9 +1,45 @@
+/* 
+ * Font assets
+ * Free fonts from https://philippemoesch.gumroad.com/l/TEEfS 
+ */
+@font-face {
+    font-family: "SaboRegular";
+    src: url("../fonts/Sabo-Regular.woff");
+    src: url("../fonts/Sabo-Regular.otf");
+}
+@font-face {
+    font-family: "SaboFilled";
+    src: url("../fonts/Sabo-Filled.woff");
+    src: url("../fonts/Sabo-Filled.otf");
+}
+/* 
+ * Base page styles
+ */
 html, body {
     height: 100%;
+    background: #c8ebe8;
+    font-family: 'Roboto Mono', monospace;
 }
 main {
     height: 70%;
 }
+header {
+    padding: 1rem;
+    margin-bottom: 2rem;
+}
+h1 {
+    font-size: 3rem;
+    text-align: center;
+    font-weight: bold;
+}
+footer {
+    display: block;
+    font-size: 1.2rem;
+    text-align: center;
+}
+/* 
+ * utility styles
+ */
 .visuallyhidden {
     border: 0;
     clip: rect(0 0 0 0);
@@ -15,20 +51,8 @@ main {
     width: 1px;
 }
 /* 
- * Free fonts from https://philippemoesch.gumroad.com/l/TEEfS 
+ * TODOS App styles
  */
-@font-face {
-    font-family: "SaboRegular";
-    src: url("../fonts/Sabo-Regular.woff");
-    src: url("../fonts/Sabo-Regular.otf");
-}
-
-@font-face {
-    font-family: "SaboFilled";
-    src: url("../fonts/Sabo-Filled.woff");
-    src: url("../fonts/Sabo-Filled.otf");
-}
-
 .TODO {
     font-family: 'Roboto Mono', monospace;
     box-sizing: border-box;
@@ -39,8 +63,8 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100%;
-    max-height: 400px;
+    min-height: 400px;
+    background-color: #e5e5e5;
 }
 
 .TODO__SubContainer {
@@ -93,6 +117,11 @@ main {
   color: #ffffff;
 }
 
+.Filter__Radio:focus-visible + .Filter__Label {
+    box-shadow: 2px 2px 0 0 #ffffff;
+    transform: translate(-1px, -1px);
+}
+
 .Filter__Radio {
     /* Add if not using autoprefixer */
     -webkit-appearance: none;
@@ -115,6 +144,7 @@ main {
 .TODO__Form {
     display: flex;
     justify-content: space-between;
+    margin-top: 1rem;
 }
 
 .Input {
@@ -151,7 +181,7 @@ main {
 }
 
 .Button--primary {
-    background-color: #c8ebe8;
+    background-color: #9ceb9c;
     min-width: 2rem;
     height: 2rem;
     padding: 0;
@@ -160,7 +190,7 @@ main {
 
 .Button--danger {
     background-color: #ebc8c8;
-    width: 1.5rem;
+    min-width: 1.5rem;
     height: 1.5rem;
     padding: 0;
 }
@@ -172,6 +202,10 @@ main {
     line-height: 1.1;
     display: flex;
     align-items: center;
+}
+
+.Item__Label--checked {
+    text-decoration: line-through;
 }
 
 .Item__Checkbox {
