--- a/week7/teamactivity/styles.css
+++ b/week7/teamactivity/styles.css
@@ -42,6 +42,11 @@
     display: flex;
     justify-content: space-around;
 }
+
 .hike_content_list {
     min-width: 300px;
+}
+
+.hidden {
+    display: none;
 }
