--- a/project/css/styles.css
+++ b/project/css/styles.css
@@ -7,3 +7,53 @@
     white-space: nowrap;
     width: 1px;
 }
+
+body {
+    width: 100%;
+    max-width: 480px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+header {
+    margin: 1rem 0;
+}
+
+h1 {
+    font-size: 3rem;
+}
+
+header h1{
+    text-align: center;
+}
+
+.search-form {
+    display: flex;
+    margin: 1rem 0;
+}
+
+.search-form input {
+    flex-grow: 1;
+    margin-right: 1rem;
+}
+
+.job-vacancy {
+    display: flex;
+    gap: 1.5rem;
+    padding: 1rem;
+    border: 2px solid;
+    position: relative;
+}
+
+.job-vacancy__content {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.job-vacancy__save-button{
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+}
