--- a/project/css/styles.css
+++ b/project/css/styles.css
@@ -1,3 +1,11 @@
+:root {
+    --black-color: #1E1B18;
+    --red-color: #D8315B;
+    --white-color : #FFFAFF;
+    --blue-color: #3E92CC;
+    --dark-blue-color: #0A2463;
+}
+
 .visually-hidden {
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
@@ -6,6 +14,13 @@
     position: absolute;
     white-space: nowrap;
     width: 1px;
+}
+
+html, body {
+    height: 100%;
+    background-color: var(--blue-color);
+    font-family: 'Poppins', sans-serif;
+    color: var(--black-color);
 }
 
 body {
@@ -19,8 +34,17 @@ header {
     margin: 1rem 0;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Roboto Slab', serif;
+    color: var(--black-color);
+}
+
 h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
+}
+
+h2 {
+    font-size: 1.25rem;
 }
 
 header h1{
@@ -35,14 +59,37 @@ header h1{
 .search-form input {
     flex-grow: 1;
     margin-right: 1rem;
+    border: 2px solid var(--black-color);
+    font-family: 'Poppins', sans-serif;
+    padding: .5rem 1rem;
 }
+
+.search-form input:focus-visible {
+    outline: none;
+}
+
 
 .job-vacancy {
     display: flex;
     gap: 1.5rem;
+    margin: 1rem 0;
     padding: 1rem;
-    border: 2px solid;
+    border: 2px solid var(--black-color);
     position: relative;
+    background-color: var(--white-color);
+}
+
+.job-vacancy__image figure {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.job-vacancy__image figcaption {
+    font-size: 12px;
+    margin-top: .5rem;
+    text-align: center;
 }
 
 .job-vacancy__content {
@@ -56,4 +103,33 @@ header h1{
     position: absolute;
     bottom: 1rem;
     right: 1rem;
+    background: var(--dark-blue-color);
+    color: var(--white-color);
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+    padding: 0.25rem 0.5rem;
+}
+
+.job-vacancy__save-button:active{
+    transform: translateY(.25rem);
+    background-color: var(--red-color);
+}
+
+.search-button {
+    background: var(--dark-blue-color);
+    color: var(--white-color);
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+    padding: 0.25rem 0.5rem;
+}
+
+.search-button:active{
+    transform: translateY(.25rem);
+    background-color: var(--red-color);
 }
