--- a/project/css/styles.css
+++ b/project/css/styles.css
@@ -17,21 +17,35 @@
 }
 
 html, body {
-    height: 100%;
-    background-color: var(--blue-color);
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background-color: var(--white-color);
     font-family: 'Poppins', sans-serif;
     color: var(--black-color);
+    height: 100%;
 }
 
-body {
+.main-container, .header-container, .footer-container {
     width: 100%;
     max-width: 480px;
     margin-left: auto;
     margin-right: auto;
+    padding: .5rem;
 }
 
 header {
-    margin: 1rem 0;
+    background: var(--white-color);
+}
+
+main {
+    background: var(--blue-color);
+}
+
+footer {
+    background: var(--red-color);
+    color: var(--white-color);
+    text-align: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -41,10 +55,6 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
     font-size: 2.5rem;
-}
-
-h2 {
-    font-size: 1.25rem;
 }
 
 header h1{
@@ -90,6 +100,14 @@ header h1{
     font-size: 12px;
     margin-top: .5rem;
     text-align: center;
+    max-width: 90px;
+    overflow:hidden;
+    white-space:nowrap;
+    text-overflow:ellipsis;
+}
+
+.job-vacancy__image img {
+    width: 80px;
 }
 
 .job-vacancy__content {
@@ -132,4 +150,8 @@ header h1{
 .search-button:active{
     transform: translateY(.25rem);
     background-color: var(--red-color);
+}
+
+#search-results {
+    min-height: calc(100vh - 175px);
 }
