--- a/project/css/styles.css
+++ b/project/css/styles.css
@@ -128,13 +128,16 @@ header h1{
 
 
 .job-vacancy {
-    display: flex;
-    gap: 1.5rem;
     margin: 1rem 0;
     padding: 1rem;
     border: 2px solid var(--black-color);
-    position: relative;
     background-color: var(--white-color);
+}
+
+.job-vacancy-container {
+    display: flex;
+    position: relative;
+    gap: 1.5rem;
 }
 
 .job-vacancy__image figure {
@@ -167,7 +170,7 @@ header h1{
 
 .job-vacancy__save-button{
     position: absolute;
-    bottom: 1rem;
+    bottom: .5rem;
     right: 1rem;
     background: var(--dark-blue-color);
     color: var(--white-color);
@@ -175,7 +178,7 @@ header h1{
     cursor: pointer;
     display: flex;
     align-items: center;
-    font-size: 1rem;
+    font-size: .75rem;
     padding: 0.25rem 0.5rem;
 }
 
@@ -187,15 +190,15 @@ header h1{
 
 .job-vacancy__delete-button{
     position: absolute;
-    bottom: 1rem;
-    right: 6.5rem;
+    bottom: .5rem;
+    right: 5.2rem;
     background: var(--dark-blue-color);
     color: var(--white-color);
     border: none;
     cursor: pointer;
     display: flex;
     align-items: center;
-    font-size: 1rem;
+    font-size: .75rem;
     padding: 0.25rem 0.5rem;
 }
 
@@ -206,7 +209,7 @@ header h1{
 
 .job-vacancy__notes-button{
     position: absolute;
-    bottom: 1rem;
+    bottom: .5rem;
     right: 1rem;
     background: var(--dark-blue-color);
     color: var(--white-color);
@@ -214,13 +217,37 @@ header h1{
     cursor: pointer;
     display: flex;
     align-items: center;
-    font-size: 1rem;
+    font-size: .75rem;
     padding: 0.25rem 0.5rem;
 }
 
 .job-vacancy__notes-button:active{
     transform: translateY(.25rem);
     background-color: var(--red-color);
+}
+
+.job-vacancy__submit-button {
+    background: var(--dark-blue-color);
+    color: var(--white-color);
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-top: .5rem;
+    padding: 0.25rem 0.5rem;
+}
+
+.job-vacancy-expanded {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.job-vacancy__notes-form {
+    display: flex;
+    flex-direction: column;
 }
 
 .search-button {
@@ -230,7 +257,7 @@ header h1{
     cursor: pointer;
     display: flex;
     align-items: center;
-    font-size: 1rem;
+    font-size: .75rem;
     padding: 0.25rem 0.5rem;
 }
 
@@ -241,4 +268,17 @@ header h1{
 
 #search-results, #saved-jobs-el {
     min-height: calc(100vh - 205px);
+}
+
+.job-vacancy-comments {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+.job-vacancy-comments li{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
 }
